# cev_template_ros2

./: .clang-format  .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile.dev  LICENSE  commit.sh  package.xml  push.sh
.devcontainer/: devcontainer.json
.github/workflows/: docker-image.yml
launch/: launch.py
scripts/: commit.sh
src/: template.cpp
